--- a/File/Main.html
+++ b/File/Main.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
   <head>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta charset="utf-8" />
-    <link
-      rel="icon"
-      href="https://lh3.googleusercontent.com/pw/AJFCJaWk2ppiixRneO28N-j_c1aLow6p-VW9-4eUZAFWompL_NBkjhkkxCtSYytT-31D1t4E9907mMfCnmIuvLDtzvSp8NIhNI3Imse2ZjrkFNOkEx93QTatf1jujgjUSUqLA0v6RVMZUEX4LWS2UnrXI0CE=w32-h32-s-no?authuser=0"
-      type="image/x-icon"
-    />
-    <title>TO-DO LIST</title>
+    <title>Daftar Tugas Sederhana</title>
+    <link rel="icon" href="icon-url" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
     <div class="tdl-holder">
-      <h2>✺ TO-DO LIST ✺</h2>
+      <h2>To do list Sederhana</h2>
       <div class="tdl-content">
         <ul>
-          <!-- Task items will be dynamically added here -->
+          <!-- Item tugas akan ditambahkan secara dinamis di sini -->
         </ul>
       </div>
       <input
         type="text"
         class="tdl-new"
-        placeholder="Write new item and hit 'Enter'..."
+        placeholder="Silahkan isi dan tekan 'enter'"
       />
     </div>
 
     <script src="script.mjs"></script>
+    <!-- Mengganti script.mjs menjadi script.js -->
   </body>
 </html>
