--- a/To-do-list.html
+++ b/To-do-list.html
@@ -16,6 +16,7 @@
     <style>
       body {
         font-family: "Nunito", sans-serif;
+        background-color: #f3feb8; /* Warna utama (60%) */
       }
       .custom-checkbox {
         appearance: none;
@@ -26,7 +27,7 @@
         position: relative;
       }
       .custom-checkbox:checked {
-        background-color: #444; /* Darker background when checked */
+        background-color: #444;
       }
       .custom-checkbox:checked::after {
         content: "\2713";
@@ -37,59 +38,81 @@
         left: 50%;
         transform: translate(-50%, -50%);
       }
-      .history-item {
+      .content-container {
+        background-color: #ffde4d; /* Warna 20% */
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+      .inbox-content,
+      .history-content {
+        background-color: #ffb22c; /* Warna 10% */
+        padding: 16px;
+        border-radius: 8px;
+        margin-top: 10px;
+        color: #000;
+      }
+      .task-item {
         display: flex;
-        justify-content: space-between;
         align-items: center;
+        justify-content: space-between;
         padding: 10px;
-        border: 1px solid #ccc;
-        margin-top: 5px;
+        background-color: #ffffff; /* Mengganti dengan putih */
         border-radius: 5px;
+        color: #000;
+      }
+      .delete-btn {
+        color: #000; /* Warna tombol hapus */
       }
     </style>
   </head>
-  <body
-    class="bg-yellow-500 flex flex-col items-center justify-center min-h-screen"
-  >
-    <div class="text-center">
-      <h1 class="text-4xl font-bold mb-2">
-        To-Do List <i class="fas fa-clock"></i>
-      </h1>
-      <p class="text-xl mb-6">Gerak bro, kalau gak gerak gay</p>
+  <body class="flex flex-col items-center justify-center min-h-screen">
+    <div class="content-container w-11/12 max-w-4xl">
+      <div class="text-center mb-6">
+        <h1 class="text-4xl font-bold mb-2">To-Do List</h1>
+        <p class="text-xl">Silahkan buat plan anda disini!</p>
+      </div>
+
+      <!-- Input tugas ke tengah -->
+      <div class="relative mb-6 flex justify-center">
+        <input
+          type="text"
+          id="task-input"
+          placeholder="Ketuk enter untuk input tugas"
+          class="border-2 border-black rounded-lg py-2 px-4 w-96 text-center"
+        />
+      </div>
+
+      <!-- Daftar tugas dengan warna background inbox-content -->
+      <div class="inbox-content">
+        <h2 class="text-lg font-bold mb-4">Daftar Tugas:</h2>
+        <div id="task-list" class="grid grid-cols-1 gap-4"></div>
+        <p
+          id="empty-task-message"
+          class="text-center text-gray-800 mt-4 hidden"
+        >
+          Daftar tugas kosong, silahkan tambahkan tugas
+        </p>
+      </div>
+
+      <!-- Riwayat tugas dengan warna background history-content -->
+      <div class="history-content mt-6">
+        <h2 class="text-lg font-bold mb-4">Riwayat Tugas:</h2>
+        <div id="history-list" class="grid grid-cols-1 gap-4"></div>
+        <p
+          id="empty-history-message"
+          class="text-center text-gray-800 mt-4 hidden"
+        >
+          Riwayat kosong, silahkan selesaikan tugas
+        </p>
+      </div>
     </div>
-    <div class="relative mb-6">
-      <input
-        type="text"
-        id="task-input"
-        placeholder="Silahkan buat plan mu disini"
-        class="border-2 border-black rounded-lg py-2 px-4 w-96 text-center"
-      />
-      <i
-        class="fas fa-clock absolute top-1/2 right-0 transform -translate-y-1/2 mr-4"
-      ></i>
-    </div>
-    <div class="bg-white rounded-lg shadow-lg p-6 w-11/12 max-w-4xl">
-      <h2 class="text-lg font-bold mb-4">Inbox:</h2>
-      <div
-        id="task-list"
-        class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"
-      ></div>
-      <p id="empty-message" class="text-center text-gray-500 mt-4 hidden">
-        Inbox Kosong, silahkan tambah tugas
-      </p>
-    </div>
-    <div class="bg-white rounded-lg shadow-lg p-6 w-11/12 max-w-4xl mt-6">
-      <h2 class="text-lg font-bold mb-4">Riwayat Tugas:</h2>
-      <div id="history-list" class="flex flex-col"></div>
-    </div>
-    <p id="empty-history-message" class="text-center text-gray-500 mt-4 hidden">
-      Riwayat kosong, silahkan selesaikan tugas
-    </p>
+
     <script>
       const taskInput = document.getElementById("task-input");
       const taskList = document.getElementById("task-list");
-      const emptyMessage = document.getElementById("empty-message");
       const historyList = document.getElementById("history-list");
+      const emptyTaskMessage = document.getElementById("empty-task-message");
       const emptyHistoryMessage = document.getElementById(
         "empty-history-message"
       );
@@ -119,38 +142,25 @@
       function renderTaskList() {
         taskList.innerHTML = "";
         if (tasks.length === 0) {
-          emptyMessage.classList.remove("hidden");
+          emptyTaskMessage.classList.remove("hidden");
         } else {
-          emptyMessage.classList.add("hidden");
+          emptyTaskMessage.classList.add("hidden");
           tasks.forEach((task, index) => {
             const taskElement = document.createElement("div");
-            taskElement.className =
-              "flex items-center p-4 border-2 border-gray-300 rounded-lg shadow-md";
+            taskElement.className = "task-item";
             taskElement.innerHTML = `
               <input type="checkbox" class="custom-checkbox mr-2" onchange="markTaskAsCompleted(${index})" />
               <div>
                 <span class="font-bold">${task.text}</span>
                 <p class="text-sm">${task.timestamp}</p>
               </div>
-              <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded w-24 ml-4" onclick="moveToHistory(${index})">Hapus</button>
+              <button class="ml-auto delete-btn" onclick="deleteTask(${index})">
+                <i class="fas fa-trash"></i>
+              </button>
             `;
             taskList.appendChild(taskElement);
           });
         }
-      }
-
-      function markTaskAsCompleted(index) {
-        const task = tasks[index];
-        if (task) {
-          task.completed = !task.completed; // Toggle completion status
-        }
-      }
-
-      function moveToHistory(index) {
-        const task = tasks.splice(index, 1)[0];
-        completedTasks.push(task);
-        renderTaskList();
-        renderHistoryList();
       }
 
       function renderHistoryList() {
@@ -161,15 +171,31 @@
           emptyHistoryMessage.classList.add("hidden");
           completedTasks.forEach((task, index) => {
             const historyItem = document.createElement("div");
-            historyItem.className = "history-item";
+            historyItem.className = "task-item";
             historyItem.innerHTML = `
-              <span class="font-bold">${task.text}</span>
-              <p class="text-sm">${task.timestamp}</p>
-              <button class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded w-24 ml-4" onclick="deleteHistory(${index})">Hapus</button>
+              <div>
+                <span class="font-bold">${task.text}</span>
+                <p class="text-sm">${task.timestamp}</p>
+              </div>
+              <button class="ml-auto delete-btn" onclick="deleteHistory(${index})">
+                <i class="fas fa-trash"></i>
+              </button>
             `;
             historyList.appendChild(historyItem);
           });
         }
+      }
+
+      function markTaskAsCompleted(index) {
+        const task = tasks.splice(index, 1)[0];
+        completedTasks.push(task);
+        renderTaskList();
+        renderHistoryList();
+      }
+
+      function deleteTask(index) {
+        tasks.splice(index, 1);
+        renderTaskList();
       }
 
       function deleteHistory(index) {
