--- a/bookshelf-app-starter-project/index.html
+++ b/bookshelf-app-starter-project/index.html
@@ -4,12 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bookshelf App</title>
-    <link rel="stylesheet" href="style.css" />
-
-    <!-- Impor script kamu di sini -->
-    <script src="main.js"></script>
-    <!-- Lampirkan `defer` jika pemanggilan dilakukan dalam <head> -->
     <script defer src="main.js"></script>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
@@ -48,12 +44,18 @@
             />
           </div>
           <div>
-            <label for="bookFormIsComplete">Selesai dibaca</label>
-            <input
-              id="bookFormIsComplete"
-              type="checkbox"
-              data-testid="bookFormIsCompleteCheckbox"
-            />
+            <label
+              for="bookFormIsComplete"
+              style="display: flex; align-items: center"
+            >
+              <input
+                id="bookFormIsComplete"
+                type="checkbox"
+                data-testid="bookFormIsCompleteCheckbox"
+                style="margin-right: 10px"
+              />
+              Selesai dibaca
+            </label>
           </div>
           <button
             id="bookFormSubmit"
@@ -86,13 +88,8 @@
 
       <section>
         <h2>Belum selesai dibaca</h2>
-
         <div id="incompleteBookList" data-testid="incompleteBookList">
-          <!-- 
-            Ini adalah struktur HTML untuk masing-masing buku.
-            Pastikan susunan elemen beserta atribut data-testid menyesuaikan seperti contoh ini.
-          -->
-          <div data-bookid="123123123" data-testid="bookItem">
+          <div data-bookid="123123123" data-testid="bookItem" class="card">
             <h3 data-testid="bookItemTitle">Judul Buku 1</h3>
             <p data-testid="bookItemAuthor">Penulis: Penulis Buku 1</p>
             <p data-testid="bookItemYear">Tahun: 2030</p>
@@ -109,13 +106,8 @@
 
       <section>
         <h2>Selesai dibaca</h2>
-
         <div id="completeBookList" data-testid="completeBookList">
-          <!-- 
-            Ini adalah struktur HTML untuk masing-masing buku.
-            Pastikan susunan elemen beserta atribut data-testid menyesuaikan seperti contoh ini.
-          -->
-          <div data-bookid="456456456" data-testid="bookItem">
+          <div data-bookid="456456456" data-testid="bookItem" class="card">
             <h3 data-testid="bookItemTitle">Judul Buku 2</h3>
             <p data-testid="bookItemAuthor">Penulis: Penulis Buku 2</p>
             <p data-testid="bookItemYear">Tahun: 2030</p>
