--- a/Bookshelf-project-dicoding/index.html
+++ b/Bookshelf-project-dicoding/index.html
@@ -88,38 +88,12 @@
 
       <section>
         <h2>Belum selesai dibaca</h2>
-        <div id="incompleteBookList" data-testid="incompleteBookList">
-          <div data-bookid="123123123" data-testid="bookItem" class="card">
-            <h3 data-testid="bookItemTitle">Judul Buku 1</h3>
-            <p data-testid="bookItemAuthor">Penulis: Penulis Buku 1</p>
-            <p data-testid="bookItemYear">Tahun: 2030</p>
-            <div>
-              <button data-testid="bookItemIsCompleteButton">
-                Selesai dibaca
-              </button>
-              <button data-testid="bookItemDeleteButton">Hapus Buku</button>
-              <button data-testid="bookItemEditButton">Edit Buku</button>
-            </div>
-          </div>
-        </div>
+        <div id="incompleteBookList" data-testid="incompleteBookList"></div>
       </section>
 
       <section>
         <h2>Selesai dibaca</h2>
-        <div id="completeBookList" data-testid="completeBookList">
-          <div data-bookid="456456456" data-testid="bookItem" class="card">
-            <h3 data-testid="bookItemTitle">Judul Buku 2</h3>
-            <p data-testid="bookItemAuthor">Penulis: Penulis Buku 2</p>
-            <p data-testid="bookItemYear">Tahun: 2030</p>
-            <div>
-              <button data-testid="bookItemIsCompleteButton">
-                Selesai dibaca
-              </button>
-              <button data-testid="bookItemDeleteButton">Hapus Buku</button>
-              <button data-testid="bookItemEditButton">Edit Buku</button>
-            </div>
-          </div>
-        </div>
+        <div id="completeBookList" data-testid="completeBookList"></div>
       </section>
     </main>
   </body>
